# edulens

./: .dockerignore  .eslintrc.json  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  MOBILE_COMPONENTS_GUIDE.md  MOBILE_RESPONSIVE_UPDATE.md  ROADMAP_PRD.md  SOP_GENERATOR_IMPLEMENTATION.md  auth.ts  docker-compose.mongo.yml  docker-compose.yml  edulens-auth.db  package-lock.json  package.json  plan-applicationTracker.prompt.prompt.md  setup-sop-generator.bat  setup-sop-generator.sh  tailwind.config.ts
ai_service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  example_faculty_scraping.py  main.py  pyproject.toml  start.sh  test_admission_example.py  test_faculty_matching.py  test_service.py  test_sop_analysis.py
ai_service/app/: __init__.py  config.py
ai_service/app/SOP_Generator/: README.md  __init__.py  db.py  main.py  models.py  requirements.txt
ai_service/app/SOP_Generator/routes/: sop.py
ai_service/app/SOP_Generator/services/: embeddings.py  llm_client.py  storage.py
ai_service/app/agents/: base_agent.py  cultural_adaptation_agent.py  document_agent.py  financial_aid_agent.py  journey_agent.py  peer_networking_agent.py  planning_agent.py  profile_evaluation_agent.py  profile_updater_agent.py  research_agent.py  roadmap_syncer_agent.py  supervisor_agent.py  tracking_agent.py  travel_planner_agent.py
ai_service/app/api/: chat_agent.py  dependencies.py  documents_processing.py
ai_service/app/api/v1/: __init__.py  admission.py  agents.py  analyzer.py  cv.py  document_builder_chat.py  documents.py  dream_chat.py  embeddings.py  faculty.py  files.py  gradcafe_collection.py  health.py  journey.py  lor_upload.py  model_training.py  ocr.py  query.py  research.py  resume.py  roadmap.py  roadmap_simple.py  search.py  smart_profile.py  sop.py  sop_analysis.py  sop_generator.py  sop_templates.py  sop_upload.py  tracker.py  vector_store.py
ai_service/app/api/v2/: __init__.py  multi_agent.py
ai_service/app/core/: __init__.py  celery_app.py  chroma_client.py  config.py
ai_service/app/data/: dream_mode_stages.json  sop_templates_data.py
ai_service/app/database/: __init__.py  mongodb.py  vector_db.py
ai_service/app/graph/: __init__.py  orchestrator.py  state.py
ai_service/app/memory/: __init__.py  mongodb_memory.py  session_manager.py
ai_service/app/models/: __init__.py  admission.py  document.py  faculty.py  gradcafe_collection.py  model_training.py  roadmap.py  schemas.py  search.py  smart_profile.py  sop_generator.py  sop_template.py
ai_service/app/scripts/: ingest_examples.py  test_lor.py
ai_service/app/services/: __init__.py  admission_prediction_service.py  chunking_service.py  document_processor.py  document_processor_new.py  document_text_service.py  email_service.py  embedding_functions.py  embedding_service.py  faculty_matching_service.py  faculty_scraping_service.py  gradcafe_collection_service.py  gridfs_tempfile.py  model_training_service.py  ocr_service.py  roadmap_analytics_service.py  roadmap_service.py  search_service.py  sop_analysis_service.py  sop_export_service.py  sop_generator_service.py  sop_template_service.py  style_retrieval.py  vector_store_service.py
ai_service/app/tasks/: __init__.py  email_tasks.py  gradcafe_tasks.py  research_tasks.py  tracker_tasks.py  training_tasks.py
ai_service/app/tools/: __init__.py  base_tool.py  email_tools.py  firecrawl_tools.py  vector_tools.py
ai_service/app/tools/document_builder/: __init__.py  graph.py  prompts.py  state.py
ai_service/app/tools/document_builder/tools/: __init__.py  base_document_tool.py  lor_tool.py  resume_tool.py  sop_tool.py
ai_service/app/utils/: __init__.py  file_utils.py  logger.py
ai_service/docs/: DOCUMENT_BUILDER_TOOL_PLAN.md  IMPLEMENTATION_SUMMARY.md  LATEST_AGENTS_SUMMARY.md  MULTI_AGENT_README.md  NEW_AGENTS_SUMMARY.md  README.md  task.md
ai_service/docs/admission/: ADMISSION_ARCHITECTURE.md  ADMISSION_IMPLEMENTATION_SUMMARY.md  ADMISSION_PREDICTION_README.md
ai_service/docs/faculty/: FACULTY_API_QUICK_REFERENCE.md  FACULTY_MATCHING_README.md  FACULTY_SCRAPING_QUICKSTART.md  FACULTY_SCRAPING_SERVICE.md
ai_service/docs/gradcafe/: GRADCAFE_COLLECTION_README.md  GRADCAFE_IMPLEMENTATION_SUMMARY.md  GRADCAFE_QUICK_START.md
ai_service/docs/guides/: DOCUMENT_AI_README.md  NEXTJS_INTEGRATION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md
ai_service/docs/ml-training/: ML_TRAINING_IMPLEMENTATION_SUMMARY.md  ML_TRAINING_PIPELINE_GUIDE.md  ML_TRAINING_QUICK_START.md  MODEL_TRAINING_README.md
ai_service/docs/sop/: README_SOP_TEMPLATES.md  SOP_ANALYSIS_IMPLEMENTATION_SUMMARY.md  SOP_ANALYSIS_QUICK_START.md  SOP_ANALYSIS_SERVICE_README.md  SOP_GENERATOR_API_REFERENCE.md  SOP_GENERATOR_QUICKSTART.md  SOP_GENERATOR_README.md  SOP_QUICK_START.md  SOP_TEMPLATE_LIBRARY.md
ai_service/examples/: gradcafe_collection_demo.py
ai_service/scripts/: init_sop_templates.py
ai_service/tests/: test_gradcafe_collection.py  test_model_training.py  test_sop_generator_api.py  test_sop_generator_service.py  test_sop_template_service.py
docs/: CENTRALIZED_FILE_SYSTEM.md  DOCKER_SETUP.md  DREAM_TO_REALITY_V2.md  IMPLEMENTATION_SUMMARY.md  MONGODB_CHROMADB_SYSTEM.md  README.md  VISUAL_OVERVIEW.md  backend_task.md  env-template.txt  onboarding-data-plan.md  requirements.md
public/: site.webmanifest
scripts/: check-users.ts  init-db.js  init-document-db.ts  set-admin.ts  setup-db.js  setup-resume-api.bat  setup-resume-api.sh
src/: middleware.ts
train_ml/: .gitignore  FACULTY_FILES_STRUCTURE.txt  GRADCAFE_FILES_SUMMARY.txt  (+24 more)
(+587 files in other folders)
